--- a/packaging/docker/Dockerfile
+++ b/packaging/docker/Dockerfile
@@ -45,7 +45,7 @@ COPY . /var/www
 RUN rmdir /var/www/html && \
     mv /var/www/htdocs /var/www/html && \
     mkdir -p /var/www/templates_c && \
-    chown -R www-data: /var/www/templates_c && \
+    chown -R apache: /var/www/templates_c && \
     sed -i 's/smarty3/smarty4/' /var/www/conf/config.inc.php && \
     cp -a /var/www/conf/config.inc.php /var/www/config.inc.php.orig
 COPY --from=composer/composer:latest-bin /composer /usr/bin/composer
