fix dockerfiles + add corresponding doc (#946)
- convert packaging README in md and document docker build
- add doc for docker custom command line args
- fix Dockerfile volumes declaration
- add doc for building ssp-alpine image

--- a/packaging/docker/Dockerfile
+++ b/packaging/docker/Dockerfile
@@ -140,11 +140,7 @@ COPY --from=build /rootfs /
 
 WORKDIR /var/www/htdocs
 
-VOLUME [ \
-        "/var/www/templates_c" , \
-        "/var/www/conf" , \
-        "/var/www/cache" , \
-    ]
+VOLUME [ "/var/www/templates_c", "/var/www/conf", "/var/www/cache" ]
 
 EXPOSE 80
 
