use symfony cache for managing session-side storage (#954)
- use symfony cache for managing sessions,
- add upgrade notes,
- add 2 cache parameters in config,
- remove expired cache entries,
- remove some warning messages,
- security: always display the same message: invalid token even if the user is not found in ldap,
- add more logs,
- set an expiration time for each cache entry,
- set symfony/cache version in composer.json,
- adding new cache bundled dependencies in packages and doc

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "gregwar/captcha": "v1.2.1",
         "mxrxdxn/pwned-passwords": "v2.1.0",
         "components/jquery": "v3.7.1",
-        "fortawesome/font-awesome": "6.5.1"
+        "fortawesome/font-awesome": "6.5.1",
+        "symfony/cache": "v5.4.42"
     },
     "scripts": {
         "post-update-cmd": [
